--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bill</title>
+    <title>Steele Shreve</title>
     <!-- Bootstrap Styles-->
     <link
       rel="stylesheet"
@@ -11,21 +11,23 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-<link rel="stylesheet" href="resources/styles/styles.css">
+    <link rel="stylesheet" href="resources/styles/styles.css" />
     <!-- INCLUDE STYLES FILE HERE -->
   </head>
 
   <body>
     <div class="container">
-      <h1>
-        Bill
-      </h1>
-
+      <h1>Steele Shreve</h1>
+      <img
+        src="./resources/images/myphoto.JPG"
+        alt="Self portrait"
+        width="500px"
+      />
       <!-- WORK FROM INSIDE THIS CONTAINER-->
     </div>
 
     <!-- INCLUDE SCRIPTS FILE HERE -->
-
+    <script src="resources/scripts/index.js"></script>
     <!-- Bootstrap Scripts-->
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
