Add 'Personal Background' section

--- a/index.html
+++ b/index.html
@@ -18,11 +18,28 @@
   <body>
     <div class="container">
       <h1>Steele Shreve</h1>
-      <img
-        src="./resources/images/myphoto.JPG"
-        alt="Self portrait"
-        width="500px"
-      />
+      <img src="./resources/images/myphoto.JPG" alt="Self portrait" />
+      <div class="section" id="personalBackground">
+        <section>
+          <h2>Personal Background</h2>
+          <p>
+            I'm Steele, I am 21 years old from Cincinnati, OH. I'm a 3rd year
+            student attending the University of Cincinnati. I'm pursuing a
+            Bachelor's of Science in Information Technology with an expected
+            graduation in May of 2025.
+          </p>
+          <br />
+          <p>
+            I am a student that loves to code and build projects. I have a
+            passion for front-end web development and technologies. I enjoy
+            learning new languages, algorithms, skills and frameworks to better
+            my skills as a developer. I want my future creative works and
+            projects to leave a positive impact on people using the web. My
+            other hobbies include lifting weights, playing basketball, and most
+            of all enjoying quality time with friends and family.
+          </p>
+        </section>
+      </div>
       <!-- WORK FROM INSIDE THIS CONTAINER-->
     </div>
 
