--- a/index.html
+++ b/index.html
@@ -39,6 +39,19 @@
             of all enjoying quality time with friends and family.
           </p>
         </section>
+        <div class="section" id="experience">
+          <section>
+            <h2>Work and Development Experience</h2>
+            <ol>
+              <li>Maxwell's Pizzeria (Team member) - 2018-2019</li>
+              <li>
+                Cooper Ridge Construction LLC. (Graphic designer & Team member)
+                - 2018-2020
+              </li>
+              <li>University of Cincinnati (Student) - 2020-Current</li>
+            </ol>
+          </section>
+        </div>
       </div>
       <!-- WORK FROM INSIDE THIS CONTAINER-->
     </div>
