--- a/index.html
+++ b/index.html
@@ -63,6 +63,21 @@
           </ol>
         </section>
       </div>
+      <div class="section" id="achievements">
+        <section>
+          <h2>Achievements</h2>
+          <ul>
+            <li>
+              Created a logo & designed merchandise for the local construction
+              company I worked for.
+            </li>
+            <li>
+              Designed & built a fully functional personal portfolio website
+              with HTML, CSS, and Javascript
+            </li>
+          </ul>
+        </section>
+      </div>
       <!-- WORK FROM INSIDE THIS CONTAINER-->
     </div>
 
