--- a/index.html
+++ b/index.html
@@ -18,65 +18,88 @@
   <body>
     <div class="container">
       <h1>Steele Shreve</h1>
-      <img src="./resources/images/myphoto.JPG" alt="Self portrait" />
-      <div class="section" id="personalBackground">
-        <section>
-          <h2>Personal Background</h2>
-          <p>
-            I'm Steele, I am 21 years old from Cincinnati, OH. I'm a 3rd year
-            student attending the University of Cincinnati. I'm pursuing a
-            Bachelor's of Science in Information Technology with an expected
-            graduation in May of 2025.
-          </p>
-          <br />
-          <p>
-            I am a student that loves to code and build projects. I have a
-            passion for front-end web development and technologies. I enjoy
-            learning new languages, algorithms, skills and frameworks to better
-            my skills as a developer. I want my future creative works and
-            projects to leave a positive impact on people using the web. My
-            other hobbies include lifting weights, playing basketball, and most
-            of all enjoying quality time with friends and family.
-          </p>
-        </section>
+      <p><span>Welcome to my online portfolio!</span></p>
+      <div class="img-abt-container">
+        <img
+          id="homePhoto"
+          src="./resources/images/myphoto.JPG"
+          alt="Self portrait"
+        />
+        <div class="section" id="personalBackground">
+          <section>
+            <h2>Personal Background</h2>
+            <p>
+              I'm Steele, I am 21 years old from Cincinnati, OH. I'm a 3rd year
+              student attending the University of Cincinnati. I'm pursuing a
+              Bachelor's of Science in Information Technology with an expected
+              graduation in May of 2025.
+            </p>
+            <p>
+              I am a student that loves to code and build projects. I have a
+              passion for front-end web development and technologies. I enjoy
+              learning new languages, algorithms, skills and frameworks to
+              better my skills as a developer. I want my future creative works
+              and projects to leave a positive impact on people using the web.
+              My other hobbies include lifting weights, playing basketball, and
+              most of all enjoying quality time with friends and family.
+            </p>
+          </section>
+        </div>
       </div>
-      <div class="section" id="experience">
-        <section>
-          <h2>Work and Development Experience</h2>
-          <ol>
-            <li>Maxwell's Pizzeria (Team member) - 2018-2019</li>
-            <li>
-              Cooper Ridge Construction LLC. (Graphic designer & Team member) -
-              2018-2020
-            </li>
-            <li>University of Cincinnati (Student) - 2020-Current</li>
-          </ol>
-        </section>
+      <div class="experience-lang-container">
+        <div class="section" id="experience">
+          <section>
+            <h2>Work and Development Experience</h2>
+            <ol>
+              <li>Maxwell's Pizzeria <sup>2017-2019</sup></li>
+              <li>
+                Cooper Ridge Construction LLC.
+                <sup>2018-2020</sup>
+              </li>
+              <li>
+                University of Cincinnati (Student)
+                <sup>2020 - Current</sup>
+              </li>
+            </ol>
+          </section>
+        </div>
+        <div class="section" id="programmingLanguages">
+          <section>
+            <h2>Programming Languages</h2>
+            <ol>
+              <li>Java</li>
+              <li>Javascript</li>
+              <li>C#</li>
+            </ol>
+          </section>
+        </div>
       </div>
-      <div class="section" id="programmingLanguages">
-        <section>
-          <h2>Programming Languages</h2>
-          <ol>
-            <li>Java</li>
-            <li>Javascript</li>
-            <li>C#</li>
-          </ol>
-        </section>
-      </div>
-      <div class="section" id="achievements">
-        <section>
-          <h2>Achievements</h2>
-          <ul>
-            <li>
-              Created a logo & designed merchandise for the local construction
-              company I worked for.
-            </li>
-            <li>
-              Designed & built a fully functional personal portfolio website
-              with HTML, CSS, and Javascript
-            </li>
-          </ul>
-        </section>
+      <div class="achievements-games-container">
+        <div class="section" id="achievements">
+          <section>
+            <h2>Achievements</h2>
+            <ul>
+              <li>
+                Created a logo & designed merchandise for the <br />
+                local construction company I worked for.
+              </li>
+              <li>
+                Designed & built a fully functional personal <br />
+                portfolio website with HTML, CSS, and Javascript.
+              </li>
+            </ul>
+          </section>
+        </div>
+        <div class="section" id="games">
+          <section>
+            <h2>Favorite Games</h2>
+            <ul>
+              <li>Red Dead Redemption 2</li>
+              <li>Rocket League</li>
+              <li>Minecraft</li>
+            </ul>
+          </section>
+        </div>
       </div>
       <!-- WORK FROM INSIDE THIS CONTAINER-->
     </div>
